--- a/ppcriativos/css/style.scss
+++ b/ppcriativos/css/style.scss
@@ -1,7 +1,7 @@
 // importacoes
 @import 'reset';
 @import 'bourbon/bourbon';
-// @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:200,400,600');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:200,400,600');
 
 
 // cores
