--- a/ppcriativos/css/style.scss
+++ b/ppcriativos/css/style.scss
@@ -452,7 +452,24 @@ div#equipe{
 }
 
 
+// video responsivo
+.video {
+    padding-bottom: 54.86%;
+    padding-top: 30px;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
 
+.video iframe, .video object, .video embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-bottom: 2.5%;
+    height: 100%;
+}
+
+<iframe src="//www.youtube.com/embed/jP-FOhkVxAI?rel=0" allowfullscreen="" frameborder="0"></iframe>
 
 
 
