--- a/ppcriativos/css/style.css
+++ b/ppcriativos/css/style.css
@@ -52,6 +52,9 @@ html {
 *, *:before, *:after {
   box-sizing: inherit; }
 
+html.block-scroll, body.block-scroll {
+  overflow: hidden; }
+
 body {
   background-color: #31003e;
   color: #f68e2f;
@@ -496,5 +499,131 @@ div#equipe {
           color: white; }
         div#equipe div.cont-equipes > div:hover > div p {
           color: white; }
+
+div#modais {
+  display: none;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0; }
+  div#modais.db {
+    display: block; }
+  div#modais div.darken-overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: -1000;
+    background-color: rgba(26, 0, 35, 0.9);
+    -webkit-transition: opacity 0.2s linear;
+    -moz-transition: opacity 0.2s linear;
+    transition: opacity 0.2s linear; }
+    div#modais div.darken-overlay.visivel {
+      opacity: 1; }
+  div#modais div.fechar-modal {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+    margin: 5px 5px;
+    width: 60px;
+    height: 60px; }
+    div#modais div.fechar-modal div > div {
+      position: absolute;
+      width: 100%;
+      height: 3px;
+      top: 50%;
+      left: 0;
+      background-color: #ffd185; }
+      div#modais div.fechar-modal div > div:nth-child(1) {
+        -webkit-transform: translateY(-50%) rotate(45deg);
+        -moz-transform: translateY(-50%) rotate(45deg);
+        -ms-transform: translateY(-50%) rotate(45deg);
+        -o-transform: translateY(-50%) rotate(45deg);
+        transform: translateY(-50%) rotate(45deg); }
+      div#modais div.fechar-modal div > div:nth-child(2) {
+        -webkit-transform: translateY(-50%) rotate(-45deg);
+        -moz-transform: translateY(-50%) rotate(-45deg);
+        -ms-transform: translateY(-50%) rotate(-45deg);
+        -o-transform: translateY(-50%) rotate(-45deg);
+        transform: translateY(-50%) rotate(-45deg); }
+    div#modais div.fechar-modal:hover {
+      cursor: pointer; }
+  div#modais div.modais {
+    z-index: 3;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    display: none; }
+    div#modais div.modais.db {
+      display: block; }
+    div#modais div.modais > div {
+      display: none;
+      opacity: 0;
+      margin: 100px auto 150px;
+      -webkit-transition: all 0.2s ease-out;
+      -moz-transition: all 0.2s ease-out;
+      transition: all 0.2s ease-out;
+      -webkit-transition-property: -webkit-transform, opacity;
+      -moz-transition-property: -moz-transform, opacity;
+      transition-property: transform, opacity;
+      -webkit-transform: scale(0.9);
+      -moz-transform: scale(0.9);
+      -ms-transform: scale(0.9);
+      -o-transform: scale(0.9);
+      transform: scale(0.9); }
+      div#modais div.modais > div.db {
+        display: block; }
+      div#modais div.modais > div.visivel {
+        opacity: 1;
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        transform: scale(1); }
+    div#modais div.modais.m-noticias > div {
+      width: 600px;
+      background-color: #fbf3fe;
+      padding: 30px 24px 42px; }
+      div#modais div.modais.m-noticias > div h4 {
+        font-size: 1em;
+        color: rgba(0, 0, 0, 0.6); }
+      div#modais div.modais.m-noticias > div h3 {
+        font-size: 1.5em;
+        color: #31003e;
+        font-weight: 600;
+        line-height: 1.2;
+        margin-bottom: 20px; }
+      div#modais div.modais.m-noticias > div p {
+        color: black; }
+    div#modais div.modais.m-equipe > div {
+      width: 600px;
+      background-color: #31003e;
+      padding: 30px 24px 42px;
+      color: #f68e2f; }
+      div#modais div.modais.m-equipe > div h3 {
+        font-size: 2.5em;
+        line-height: 1;
+        color: #ffd185;
+        margin-bottom: 30px; }
+      div#modais div.modais.m-equipe > div p {
+        color: #f68e2f; }
+
+.video {
+  padding-bottom: 54.86%;
+  padding-top: 30px;
+  position: relative;
+  overflow: hidden;
+  width: 100%; }
+
+.video iframe, .video object, .video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-bottom: 2.5%;
+  height: 100%; }
 
 /*# sourceMappingURL=style.css.map */
