--- a/ppcriativos/css/style.css
+++ b/ppcriativos/css/style.css
@@ -509,108 +509,143 @@ div#modais {
   left: 0; }
   div#modais.db {
     display: block; }
-  div#modais div.darken-overlay {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    z-index: -1000;
-    background-color: rgba(26, 0, 35, 0.9);
-    -webkit-transition: opacity 0.2s linear;
-    -moz-transition: opacity 0.2s linear;
-    transition: opacity 0.2s linear; }
-    div#modais div.darken-overlay.visivel {
-      opacity: 1; }
-  div#modais div.fechar-modal {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 1;
-    margin: 5px 5px;
-    width: 60px;
-    height: 60px; }
-    div#modais div.fechar-modal div > div {
+  div#modais div.flexbox {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    div#modais div.flexbox div.darken-overlay {
       position: absolute;
-      width: 100%;
-      height: 3px;
-      top: 50%;
       left: 0;
-      background-color: #ffd185; }
-      div#modais div.fechar-modal div > div:nth-child(1) {
-        -webkit-transform: translateY(-50%) rotate(45deg);
-        -moz-transform: translateY(-50%) rotate(45deg);
-        -ms-transform: translateY(-50%) rotate(45deg);
-        -o-transform: translateY(-50%) rotate(45deg);
-        transform: translateY(-50%) rotate(45deg); }
-      div#modais div.fechar-modal div > div:nth-child(2) {
-        -webkit-transform: translateY(-50%) rotate(-45deg);
-        -moz-transform: translateY(-50%) rotate(-45deg);
-        -ms-transform: translateY(-50%) rotate(-45deg);
-        -o-transform: translateY(-50%) rotate(-45deg);
-        transform: translateY(-50%) rotate(-45deg); }
-    div#modais div.fechar-modal:hover {
-      cursor: pointer; }
-  div#modais div.modais {
-    z-index: 3;
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
-    display: none; }
-    div#modais div.modais.db {
-      display: block; }
-    div#modais div.modais > div {
-      display: none;
+      top: 0;
+      width: 100%;
+      height: 100%;
       opacity: 0;
-      margin: 100px auto 150px;
-      -webkit-transition: all 0.2s ease-out;
-      -moz-transition: all 0.2s ease-out;
-      transition: all 0.2s ease-out;
-      -webkit-transition-property: -webkit-transform, opacity;
-      -moz-transition-property: -moz-transform, opacity;
-      transition-property: transform, opacity;
-      -webkit-transform: scale(0.9);
-      -moz-transform: scale(0.9);
-      -ms-transform: scale(0.9);
-      -o-transform: scale(0.9);
-      transform: scale(0.9); }
-      div#modais div.modais > div.db {
+      z-index: 0;
+      background-color: rgba(26, 0, 35, 0.9);
+      -webkit-transition: opacity 0.2s linear;
+      -moz-transition: opacity 0.2s linear;
+      transition: opacity 0.2s linear; }
+      div#modais div.flexbox div.darken-overlay.visivel {
+        opacity: 1; }
+    div#modais div.flexbox div.fechar-modal {
+      position: absolute;
+      top: 0;
+      right: 0;
+      opacity: 0;
+      z-index: 1;
+      margin: 5px 5px;
+      width: 60px;
+      height: 60px;
+      -webkit-transition: opacity 0.2s linear;
+      -moz-transition: opacity 0.2s linear;
+      transition: opacity 0.2s linear; }
+      div#modais div.flexbox div.fechar-modal.visivel {
+        opacity: 1; }
+      div#modais div.flexbox div.fechar-modal div > div {
+        position: absolute;
+        width: 100%;
+        height: 3px;
+        top: 50%;
+        left: 0;
+        background-color: #ffd185; }
+        div#modais div.flexbox div.fechar-modal div > div:nth-child(1) {
+          -webkit-transform: translateY(-50%) rotate(45deg);
+          -moz-transform: translateY(-50%) rotate(45deg);
+          -ms-transform: translateY(-50%) rotate(45deg);
+          -o-transform: translateY(-50%) rotate(45deg);
+          transform: translateY(-50%) rotate(45deg); }
+        div#modais div.flexbox div.fechar-modal div > div:nth-child(2) {
+          -webkit-transform: translateY(-50%) rotate(-45deg);
+          -moz-transform: translateY(-50%) rotate(-45deg);
+          -ms-transform: translateY(-50%) rotate(-45deg);
+          -o-transform: translateY(-50%) rotate(-45deg);
+          transform: translateY(-50%) rotate(-45deg); }
+      div#modais div.flexbox div.fechar-modal:hover {
+        cursor: pointer; }
+    div#modais div.flexbox div.modais {
+      z-index: 3;
+      overflow-y: scroll;
+      display: none;
+      margin: 50px 0;
+      max-height: calc(100% - 100px); }
+      div#modais div.flexbox div.modais.db {
         display: block; }
-      div#modais div.modais > div.visivel {
-        opacity: 1;
-        -webkit-transform: scale(1);
-        -moz-transform: scale(1);
-        -ms-transform: scale(1);
-        -o-transform: scale(1);
-        transform: scale(1); }
-    div#modais div.modais.m-noticias > div {
-      width: 600px;
-      background-color: #fbf3fe;
-      padding: 30px 24px 42px; }
-      div#modais div.modais.m-noticias > div h4 {
-        font-size: 1em;
-        color: rgba(0, 0, 0, 0.6); }
-      div#modais div.modais.m-noticias > div h3 {
-        font-size: 1.5em;
-        color: #31003e;
-        font-weight: 600;
-        line-height: 1.2;
-        margin-bottom: 20px; }
-      div#modais div.modais.m-noticias > div p {
-        color: black; }
-    div#modais div.modais.m-equipe > div {
-      width: 600px;
-      background-color: #31003e;
-      padding: 30px 24px 42px;
-      color: #f68e2f; }
-      div#modais div.modais.m-equipe > div h3 {
-        font-size: 2.5em;
-        line-height: 1;
-        color: #ffd185;
-        margin-bottom: 30px; }
-      div#modais div.modais.m-equipe > div p {
-        color: #f68e2f; }
+      div#modais div.flexbox div.modais > div {
+        width: 100%;
+        display: none;
+        opacity: 0;
+        -webkit-transition: all 0.2s ease-out;
+        -moz-transition: all 0.2s ease-out;
+        transition: all 0.2s ease-out;
+        -webkit-transition-property: -webkit-transform, opacity;
+        -moz-transition-property: -moz-transform, opacity;
+        transition-property: transform, opacity;
+        -webkit-transform: scale(0.9);
+        -moz-transform: scale(0.9);
+        -ms-transform: scale(0.9);
+        -o-transform: scale(0.9);
+        transform: scale(0.9); }
+        div#modais div.flexbox div.modais > div.db {
+          display: block; }
+        div#modais div.flexbox div.modais > div.visivel {
+          opacity: 1;
+          -webkit-transform: scale(1);
+          -moz-transform: scale(1);
+          -ms-transform: scale(1);
+          -o-transform: scale(1);
+          transform: scale(1); }
+      div#modais div.flexbox div.modais.m-noticias {
+        width: 600px; }
+        div#modais div.flexbox div.modais.m-noticias > div {
+          background-color: #fbf3fe;
+          padding: 30px 24px 42px; }
+          div#modais div.flexbox div.modais.m-noticias > div h4 {
+            font-size: 1em;
+            color: rgba(0, 0, 0, 0.6); }
+          div#modais div.flexbox div.modais.m-noticias > div h3 {
+            font-size: 1.5em;
+            color: #31003e;
+            font-weight: 600;
+            line-height: 1.2;
+            margin-bottom: 20px; }
+          div#modais div.flexbox div.modais.m-noticias > div p {
+            color: black; }
+      div#modais div.flexbox div.modais.m-equipe {
+        width: 960px; }
+        div#modais div.flexbox div.modais.m-equipe > div {
+          background-color: #31003e;
+          padding: 30px 24px 42px;
+          color: #f68e2f; }
+          div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes {
+            vertical-align: baseline;
+            margin-bottom: 40px; }
+            div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes h3 {
+              font-size: 2.5em;
+              line-height: 1;
+              color: #ffd185;
+              margin-right: 20px;
+              display: inline-block;
+              vertical-align: baseline; }
+            div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes div {
+              vertical-align: center;
+              height: 100%;
+              padding: 5px 10px;
+              background-color: #1a0023;
+              color: #f68e2f;
+              display: inline-block;
+              vertical-align: baseline; }
+              div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes div a {
+                height: 100%;
+                vertical-align: middle; }
+                div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes div a svg {
+                  display: inline;
+                  height: 15px;
+                  width: auto;
+                  vertical-align: middle; }
+                  div#modais div.flexbox div.modais.m-equipe > div div.nome-e-lattes div a svg path {
+                    fill: #f68e2f; }
+          div#modais div.flexbox div.modais.m-equipe > div p {
+            color: #f68e2f; }
 
 .video {
   padding-bottom: 54.86%;
