--- a/ppcriativos/css/style.scss
+++ b/ppcriativos/css/style.scss
@@ -467,114 +467,164 @@ div#modais{
 	&.db{
 		display: block;
 	}
-	div.darken-overlay{
-		position: absolute;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		opacity: 0;
-		z-index: -1000;
-		background-color: transparentize($roxo-escuro, 0.1);
+	div.flexbox{
+		display: flex;
+		justify-content: center;
+		align-items: center;
 
-		@include transition(opacity 0.2s linear);
-		&.visivel{
-			opacity: 1;
-		}
-	}
-
-	div.fechar-modal{
-		position: absolute;
-		top: 0;
-		right: 0;
-		z-index: 1;
-		margin: 5px 5px;
-		width: 60px;
-		height: 60px;
-		div > div{
+		div.darken-overlay{
 			position: absolute;
-			width: 100%;
-			height: 3px;
-			top: 50%;
 			left: 0;
-			background-color: $laranja-claro;
-			&:nth-child(1){
-				@include  transform(translateY(-50%) rotate(45deg));
-			}
-			&:nth-child(2){
-				@include  transform(translateY(-50%) rotate(-45deg));
-			}
-		}
-		&:hover{
-			cursor: pointer;
-		}
-	}
-
-	div.modais{
-		z-index: 3;
-		width: 100%;
-		height: 100%;
-		overflow-y: scroll;
-		display: none;
-		&.db{
-			display: block;
-		}
-		&>div{
-			display: none;
+			top: 0;
+			width: 100%;
+			height: 100%;
 			opacity: 0;
-			margin: 100px auto 150px;
-			@include transition(all 0.2s ease-out);
-			@include transition-property(transform, opacity);
-			@include transform(scale(0.9));
+			z-index: 0;
+			background-color: transparentize($roxo-escuro, 0.1);
+
+			@include transition(opacity 0.2s linear);
+			&.visivel{
+				opacity: 1;
+			}
+		}
+
+		div.fechar-modal{
+			position: absolute;
+			top: 0;
+			right: 0;
+			opacity: 0;
+			z-index: 1;
+			margin: 5px 5px;
+			width: 60px;
+			height: 60px;
+			@include transition(opacity 0.2s linear);
+			&.visivel{
+				opacity: 1;
+			}
+			div > div{
+				position: absolute;
+				width: 100%;
+				height: 3px;
+				top: 50%;
+				left: 0;
+				background-color: $laranja-claro;
+				&:nth-child(1){
+					@include  transform(translateY(-50%) rotate(45deg));
+				}
+				&:nth-child(2){
+					@include  transform(translateY(-50%) rotate(-45deg));
+				}
+			}
+			&:hover{
+				cursor: pointer;
+			}
+		}
+
+		div.modais{
+			z-index: 3;
+			overflow-y: scroll;
+			display: none;
+			margin: 50px 0;
+			max-height: calc(100% - 100px);
+
 			&.db{
 				display: block;
 			}
-			&.visivel{
-				opacity: 1;
-				@include transform(scale(1));
+			&>div{
+				width: 100%;
+				display: none;
+				opacity: 0;
+				@include transition(all 0.2s ease-out);
+				@include transition-property(transform, opacity);
+				@include transform(scale(0.9));
+				&.db{
+					display: block;
+				}
+				&.visivel{
+					opacity: 1;
+					@include transform(scale(1));
+				}
 			}
-		}
-		&.m-noticias{
-			& > div{
+			&.m-noticias{
 				width: 600px;
-				background-color: $branco-roxo;
-				padding: 30px 24px 42px;
-				h4{
-					font-size: 1em;
-					color: rgba(0,0,0,0.6);
-				}
-				h3{
-					font-size: 1.5em;
-					color: $roxo;
-					font-weight: 600;
-					line-height: 1.2;
-					margin-bottom: 20px;
-				}
-				p{
-					color: black;
+				& > div{
+					background-color: $branco-roxo;
+					padding: 30px 24px 42px;
+					h4{
+						font-size: 1em;
+						color: rgba(0,0,0,0.6);
+					}
+					h3{
+						font-size: 1.5em;
+						color: $roxo;
+						font-weight: 600;
+						line-height: 1.2;
+						margin-bottom: 20px;
+					}
+					p{
+						color: black;
+					}
 				}
 			}
-		}
 
-		&.m-equipe{
-			& > div{
-				width: 600px;
-				background-color: $roxo;
-				padding: 30px 24px 42px;
-				color: $laranja;
-				h3{
-					font-size: 2.5em;
-					line-height: 1;
-					color: $laranja-claro;
-					margin-bottom: 30px;
-				}
-				p{
+			&.m-equipe{
+				width: 960px;
+				& > div{
+					background-color: $roxo;
+					padding: 30px 24px 42px;
 					color: $laranja;
-				}
+					div.nome-e-lattes{
+							vertical-align: baseline;
+							margin-bottom: 40px;
 
+						
+						h3{
+							font-size: 2.5em;
+							line-height: 1;
+							color: $laranja-claro;
+							margin-right: 20px;
+							display: inline-block;
+							vertical-align: baseline;
+
+							
+
+						}
+						div{
+							vertical-align: center;
+							height: 100%;
+							padding: 5px 10px;
+							background-color: $roxo-escuro;
+							color: $laranja;
+							display: inline-block;
+							vertical-align: baseline;
+
+							
+							a{
+								height: 100%;
+								vertical-align: middle;
+								svg{
+									display: inline;
+									height: 15px;
+									width: auto;
+									vertical-align: middle;
+									path{
+										fill: $laranja;
+									}
+								}
+							}
+						}
+						
+					}
+					
+					p{
+						color: $laranja;
+					}
+
+				}
 			}
 		}
 	}
+	
 }
 
 
