--- a/ppcriativos/css/_reset.scss
+++ b/ppcriativos/css/_reset.scss
@@ -53,3 +53,15 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+
+%clearfix{
+	&:before,
+	&:after {
+	    content: " "; /* 1 */
+	    display: table; /* 2 */
+	}
+
+	&:after {
+	    clear: both;
+	}
+}
