--- a/ppcriativos/css/style.css
+++ b/ppcriativos/css/style.css
@@ -118,6 +118,71 @@ a {
   text-decoration: none;
   color: inherit; }
 
+nav#menu-site {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 15px;
+  z-index: 2; }
+  nav#menu-site ul {
+    padding: 0;
+    position: relative; }
+    nav#menu-site ul li {
+      display: inline-block;
+      margin: 0 0.4vw;
+      padding: 0.3vw 0.6vw;
+      font-size: calc(7px + 0.7vw);
+      font-family: "Raleway", Verdana, sans-serif; }
+      nav#menu-site ul li a {
+        color: #f68e2f;
+        -webkit-transition: color 0.1s linear;
+        -moz-transition: color 0.1s linear;
+        transition: color 0.1s linear; }
+      nav#menu-site ul li:hover a {
+        cursor: pointer;
+        color: #ffd185; }
+      nav#menu-site ul li.especial {
+        background-color: #f68e2f;
+        -webkit-transition: background-color 0.1s linear;
+        -moz-transition: background-color 0.1s linear;
+        transition: background-color 0.1s linear;
+        -webkit-transform: skew(-15deg);
+        -moz-transform: skew(-15deg);
+        -ms-transform: skew(-15deg);
+        -o-transform: skew(-15deg);
+        transform: skew(-15deg); }
+        nav#menu-site ul li.especial div {
+          -webkit-transform: skew(15deg);
+          -moz-transform: skew(15deg);
+          -ms-transform: skew(15deg);
+          -o-transform: skew(15deg);
+          transform: skew(15deg); }
+          nav#menu-site ul li.especial div a {
+            color: #31003e; }
+        nav#menu-site ul li.especial:hover {
+          background-color: #ffd185; }
+  nav#menu-site.fixo {
+    width: 100%;
+    position: fixed;
+    background-color: #1a0023;
+    display: flex;
+    justify-content: center;
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    -ms-transform: translateY(-100%);
+    -o-transform: translateY(-100%);
+    transform: translateY(-100%); }
+    nav#menu-site.fixo.transition {
+      -webkit-transition: -webkit-transform 0.2s ease-out;
+      -moz-transition: -moz-transform 0.2s ease-out;
+      transition: transform 0.2s ease-out; }
+    nav#menu-site.fixo.revela {
+      -webkit-transform: translateY(0%);
+      -moz-transform: translateY(0%);
+      -ms-transform: translateY(0%);
+      -o-transform: translateY(0%);
+      transform: translateY(0%); }
+
 div#intro {
   width: 100%;
   height: calc(100vh - 150px);
@@ -125,43 +190,6 @@ div#intro {
   padding: 0;
   position: relative;
   overflow: hidden; }
-  div#intro nav.menu {
-    padding: 20px; }
-    div#intro nav.menu ul {
-      padding: 0; }
-      div#intro nav.menu ul li {
-        display: inline-block;
-        margin: 0 0.4vw;
-        padding: 0.3vw 0.6vw;
-        font-size: calc(7px + 0.7vw);
-        font-family: "Raleway", Verdana, sans-serif; }
-        div#intro nav.menu ul li a {
-          color: #f68e2f;
-          -webkit-transition: color 0.1s linear;
-          -moz-transition: color 0.1s linear;
-          transition: color 0.1s linear; }
-        div#intro nav.menu ul li:hover a {
-          color: #ffd185; }
-        div#intro nav.menu ul li.especial {
-          background-color: #f68e2f;
-          -webkit-transition: background-color 0.1s linear;
-          -moz-transition: background-color 0.1s linear;
-          transition: background-color 0.1s linear;
-          -webkit-transform: skew(-15deg);
-          -moz-transform: skew(-15deg);
-          -ms-transform: skew(-15deg);
-          -o-transform: skew(-15deg);
-          transform: skew(-15deg); }
-          div#intro nav.menu ul li.especial div {
-            -webkit-transform: skew(15deg);
-            -moz-transform: skew(15deg);
-            -ms-transform: skew(15deg);
-            -o-transform: skew(15deg);
-            transform: skew(15deg); }
-            div#intro nav.menu ul li.especial div a {
-              color: #31003e; }
-          div#intro nav.menu ul li.especial:hover {
-            background-color: #ffd185; }
   div#intro div.grafismointro {
     position: absolute;
     right: 0;
@@ -313,12 +341,7 @@ div#intro {
       font-family: "Raleway", Verdana, sans-serif;
       font-weight: 200;
       font-size: 1.3vw;
-      opacity: 0;
-      -webkit-transition: opacity 0.2s linear;
-      -moz-transition: opacity 0.2s linear;
-      transition: opacity 0.2s linear; }
-      div#intro div#logointro h3.visivel {
-        opacity: 1; }
+      opacity: 1; }
     div#intro div#logointro svg {
       width: 100%;
       height: auto; }
@@ -536,7 +559,8 @@ div#modais {
   height: 100vh;
   position: fixed;
   top: 0;
-  left: 0; }
+  left: 0;
+  z-index: 3; }
   div#modais.db {
     display: block; }
   div#modais div.flexbox {
